examples/slack/ingress-snowball/base/snowball-webclient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: snowball-webclient
  name: snowball-webclient
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: snowball-webclient
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: snowball-webclient
    spec:
      containers:
      - name: snowball-webclient
        image: gcr.io/myapp/snowball-webclient:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          protocol: TCP
        imagePullPolicy: IfNotPresent
