examples/slack/ingress-snowball/base/snowball-webclient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snowball-webclient-service
  labels:
    app: snowball-webclient-service
spec:
  type: NodePort
  selector:
    app: snowball-webclient
  ports:
    - port: 80
      targetPort: 3000
